# qaoa-school-timetable

./: .gitignore  README.md  bra_instance01.py  den_smallschool.py  pyproject.toml  requirements.txt  tiny.py  tiny_dense.py  tiny_parse.py  toy.py  toy_qmos_dense.py  toy_qmos_sparse.py  toy_view.py
dataset/: Brazil-Instance2.xml  Denmark-SmallSchool.xml  QAOA_Data_Fall_2025 - InstructorQuota_easy.csv  QAOA_Data_Fall_2025 - InstructorSkill_easy.csv  QAOA_Data_Fall_2025 - InstructorSlot_easy.csv  QAOA_Data_Fall_2025 - SlotConflict_easy.csv  QAOA_Data_Fall_2025 - Task_easy.csv  QAOA_Data_Fall_2025 - slotDOTW.csv  Toy_Model.xml  Toy_Model.xml.xlsx  bra-instance01.xml  den-smallschool.xml  toy_graph_sparse.pickle
qaoa/: qaoa.py  util.py
results/: Den_1_0.csv  Min_1_0.csv  Toy_1_0.csv  Toy_1_1.csv  Toy_1_2.csv  Toy_1_3.csv  Toy_1_4.csv  Toy_1_5.csv  Toy_1_6.csv  Toy_1_7.csv  Toy_1_8.csv  Toy_1_9.csv  Toy_2_0.csv  Toy_2_1.csv  Toy_2_2.csv  Toy_2_3.csv  Toy_2_4.csv  Toy_2_5.csv  Toy_2_6.csv  Toy_2_7.csv  Toy_2_8.csv  Toy_2_9.csv  Toy_4_0.csv  Toy_4_1.csv  Toy_4_2.csv  Toy_4_3.csv  Toy_4_4.csv  Toy_4_5.csv  Toy_4_6.csv  Toy_4_7.csv  Toy_4_8.csv  Toy_4_9.csv  Toy_8_0.csv  Toy_8_1.csv  Toy_8_2.csv  Toy_8_3.csv  Toy_8_4.csv  Toy_8_5.csv  Toy_8_6.csv  Toy_8_7.csv  (+2 more)
timing/: Toy_1_0.txt  Toy_1_1.txt  Toy_1_2.txt  Toy_1_3.txt  Toy_1_4.txt  Toy_1_5.txt  Toy_1_6.txt  Toy_1_7.txt  Toy_1_8.txt  Toy_1_9.txt  Toy_2_0.txt  Toy_2_1.txt  Toy_2_2.txt  Toy_2_3.txt  Toy_2_4.txt  Toy_2_5.txt  Toy_2_6.txt  Toy_2_7.txt  Toy_2_8.txt  Toy_2_9.txt  Toy_4_0.txt  Toy_4_1.txt  Toy_4_2.txt  Toy_4_3.txt  (+16 more)
